Fix amplify authenticator zooming in on focus on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,26 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  /*border: 1px solid red;*/
 }
 
 :root {
   --amplify-primary-color: salmon;
   --amplify-primary-tint: salmon;
   --amplify-primary-shade: salmon;
+  --amplify-text-xxs:	0.75rem;
+  --amplify-text-xs:	0.81rem;
+  --amplify-text-sm:	0.875rem;
+  --amplify-text-md:	1rem;
+  --amplify-text-lg:	1.5rem;
+  --amplify-text-xl:	2rem;
+  --amplify-text-xxl:	2.5rem;
 }
+
+@media (max-width: 768px){ 
+  :root {
+    --amplify-text-sm:	1rem;
+  }
+} 
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
